Version 2.6:

	* Add DBusConnection.releaseBusName API
	* Add DBusConnection.PeerSet for tracking peer lifetimes
	* Fix bug where DBusDaemon never sends NameOwnerChanged/NameLost
	  signals
	* Patches from Omair Majid <omajid -at- redhat -dot- com> to fix
	  DBusCall manpage and allow alternative docbook-to-man implementations.
	* fix dependency on unix.jar even in tcp mode

Version 2.5.1:

	* Fix for possible NPex in DBusDaemon
	* Add hexdump.jar to Class-Path for libdbus-java.jar
	* Add GetAll to properties interface (Patch from
	  Sveinung Kvilhaugsvik <sveinung84 -at- users -dot- sourceforge -dot- net>)
	* Make signals with renamed interfaces and member names work
	  if they are explicitly listened for (Partially fixes: #18257).
	  Also make the error reporting better when it doesn't work.
	* Add test for signal with renamed interface.
	* Fix clearing of string buffer during marshalling (Fixes: #17362)
	* Fix array marshalling bug (Fixes: #13291)

Version 2.5:

	* Patch from  Omair Majid <omajid -at- redhat -dot- com> to
	  have seperate javadoc installation directory
	* Patch from  Omair Majid <omajid -at- redhat -dot- com> to
	  have make all build the manpages.
	* ... but as serkan_kaba requested, also provide a bin target which doesn't
	* Fix returning DBusSerializables (Spotted by Johannes Felten
	  <johannesfelten -at- googlemail -dot- com>)
	* Fix CreateInterface (Spotted by Tom Walsh <walshtc -at- gmail -dot- com>)
	* Fix serial assignment race condition (Spotted by Ed Wei
	  <Edward.Wei.03 -at- alum -dot- dartmouth -dot- org>)
	* Fix dynamic introspection of objects which export the same
	  interface multiple times (Patch from	Sveinung Kvilhaugsvik
	  <sveinung84 -at- users -dot- sourceforge -dot- net>)
	* Fix CreateInterface to mangle names which are reserved words
	  (Spotted by Sveinung Kvilhaugsvik <sveinung84 -at- users -dot-
		sourceforge -dot- net>)
	* Fix DBusDaemon to not crash on bad tcp connections (Patch from