@@ -9,14 +9,14 @@ org.freedesktop.dbus.AbstractConnection$_thread = ERR
 org.freedesktop.dbus.AbstractConnection$_sender = ERR
 org.freedesktop.dbus.DirectConnection = ERR
 org.freedesktop.dbus.DBusConnection = ERR
-org.freedesktop.dbus.DBusConnection$PeerSet = DEBUG
+org.freedesktop.dbus.DBusConnection$PeerSet = ERR
 org.freedesktop.dbus.AbstractConnection$1 = ERR
 org.freedesktop.dbus.DBusSignal = ERR
 org.freedesktop.dbus.EfficientQueue = ERR
 org.freedesktop.dbus.Transport = ERR
 org.freedesktop.dbus.Transport$SASL = ERR
 org.freedesktop.dbus.Transport$SASL$Command = ERR
-org.freedesktop.dbus.Marshalling = ERR
+org.freedesktop.dbus.Marshalling = VERBOSE
 org.freedesktop.dbus.ObjectTree = ERR
 org.freedesktop.dbus.BusAddress = ERR
 org.freedesktop.dbus.RemoteInvocationHandler = ERR
